--- a/time-series-manipulation/01-manipulating-time-series.ipynb
+++ b/time-series-manipulation/01-manipulating-time-series.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Versão de Python Neste Jupyter Notebook: 3.10.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Versão da Linguagem Python\n",
+    "\n",
+    "from platform import python_version\n",
+    "print('Versão de Python Neste Jupyter Notebook:', python_version())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -14,8 +34,14 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
+    "#imports necessários\n",
+    "\n",
+    "import matplotlib.pyplot as plt       # visualização\n",
+    "import pandas as pd                   # manipulação de dados\n",
+    "from datetime import datetime         # manipulação de datas\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "time_stamp = pd.Timestamp(datetime(2022, 1, 1))\n",
     "\n",
@@ -28,18 +54,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Author: Caique Miranda\n",
+      "\n",
+      "Github username: caiquemiranda\n",
+      "\n",
+      "matplotlib: 3.5.2\n",
+      "sys       : 3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]\n",
+      "pandas    : 1.4.3\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "pd.Timestamp(datetime(2022, 1, 1)) == time_stamp"
+    "# usaremos o pacote watermark para adicionar um logotipo ao nosso notebook com as versões dos pacotes utilizados\n",
+    "\n",
+    "%reload_ext watermark\n",
+    "%watermark -a \"Caique Miranda\" --iversions -gu caiquemiranda"
    ]
   },
   {
@@ -50,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2022-01-01 00:00:00')"
+       "True"
       ]
      },
      "execution_count": 4,
@@ -59,7 +92,7 @@
     }
    ],
    "source": [
-    "time_stamp"
+    "pd.Timestamp(datetime(2022, 1, 1)) == time_stamp"
    ]
   },
   {
@@ -70,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "2022"
+       "Timestamp('2022-01-01 00:00:00')"
       ]
      },
      "execution_count": 5,
@@ -79,7 +112,7 @@
     }
    ],
    "source": [
-    "time_stamp.year"
+    "time_stamp"
    ]
   },
   {
@@ -90,10 +123,30 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "2022"
       ]
      },
      "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_stamp.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,31 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "periodo = pd.Period('2022-01')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Period('2022-01', 'M')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "periodo"
    ]
   },
   {
@@ -148,10 +181,30 @@
     {
      "data": {
       "text/plain": [
-       "Period('2022-01-31', 'D')"
+       "Period('2022-01', 'M')"
       ]
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "periodo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Period('2022-01-31', 'D')"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,24 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\CAQUEM~1\\AppData\\Local\\Temp/ipykernel_14440/3275254703.py:3: FutureWarning: The 'freq' argument in Timestamp is deprecated and will be removed in a future version.\n",
-      "  pd.Timestamp('2019-1-1', freq='M')\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "Timestamp('2019-01-01 00:00:00', freq='M')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +249,7 @@
        "              dtype='datetime64[ns]', freq='M')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +270,7 @@
        "Timestamp('2019-01-31 00:00:00', freq='M')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +292,7 @@
        "            dtype='period[M]')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -282,31 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.29858258, 0.34262163],\n",
-       "       [0.96350166, 0.90001431],\n",
-       "       [0.3967401 , 0.848063  ],\n",
-       "       [0.32932958, 0.86479339],\n",
-       "       [0.75575749, 0.92774149],\n",
-       "       [0.36841275, 0.56649565],\n",
-       "       [0.25185721, 0.21043316],\n",
-       "       [0.63247984, 0.3148742 ],\n",
-       "       [0.69957584, 0.56981703],\n",
-       "       [0.18029598, 0.6321715 ],\n",
-       "       [0.16400225, 0.25167096],\n",
-       "       [0.68890747, 0.92339276]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "dados = np.random.random(size=(12,2))"
@@ -314,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +434,7 @@
        "Year                     A"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -468,15 +491,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dayofweek</td>\n",
+       "      <td>.dayofweek</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>weekofyear</td>\n",
+       "      <td>.weekofyear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>dayofyear</td>\n",
+       "      <td>.dayofyear</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -487,12 +510,12 @@
        "0       .second, .minute, .hour\n",
        "1  .day, .month, .quarte, .year\n",
        "2                      .weekday\n",
-       "3                     dayofweek\n",
-       "4                    weekofyear\n",
-       "5                     dayofyear"
+       "3                    .dayofweek\n",
+       "4                   .weekofyear\n",
+       "5                    .dayofyear"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,11 +535,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c1c6012700f12de55f8e0fcc4d692549fb71199068374c43eaca7d87c58b71b9"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit (system)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -530,9 +550,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "74af3d2f25f1e46ebd2903d59225d79e4675ec224d56c01fc30cd168c2010d53"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
